
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct mlx4_en_priv {unsigned long sample_interval; int rx_ring_num; unsigned long* last_moder_packets; unsigned long* last_moder_bytes; unsigned long pkt_rate_low; int rx_usecs_low; unsigned long pkt_rate_high; int rx_usecs_high; int* last_moder_time; scalar_t__ last_moder_jiffies; int rx_frames; struct mlx4_en_cq* rx_cq; int stats_lock; TYPE_1__* rx_ring; int adaptive_rx_coal; } ;
struct mlx4_en_cq {int moder_time; int moder_cnt; } ;
struct TYPE_2__ {unsigned long packets; unsigned long bytes; } ;


 unsigned long HZ ;
 unsigned long MLX4_EN_AVG_PKT_SMALL ;
 unsigned long MLX4_EN_RX_RATE_THRESH ;
 int en_err (struct mlx4_en_priv*,char*,int) ;
 scalar_t__ jiffies ;
 int mlx4_en_set_cq_moder (struct mlx4_en_priv*,struct mlx4_en_cq*) ;
 int spin_lock_bh (int *) ;
 int spin_unlock_bh (int *) ;

__attribute__((used)) static void mlx4_en_auto_moderation(struct mlx4_en_priv *priv)
{
 unsigned long period = (unsigned long) (jiffies - priv->last_moder_jiffies);
 struct mlx4_en_cq *cq;
 unsigned long packets;
 unsigned long rate;
 unsigned long avg_pkt_size;
 unsigned long rx_packets;
 unsigned long rx_bytes;
 unsigned long rx_pkt_diff;
 int moder_time;
 int ring, err;

 if (!priv->adaptive_rx_coal || period < priv->sample_interval * HZ)
  return;

 for (ring = 0; ring < priv->rx_ring_num; ring++) {
  spin_lock_bh(&priv->stats_lock);
  rx_packets = priv->rx_ring[ring].packets;
  rx_bytes = priv->rx_ring[ring].bytes;
  spin_unlock_bh(&priv->stats_lock);

  rx_pkt_diff = ((unsigned long) (rx_packets -
    priv->last_moder_packets[ring]));
  packets = rx_pkt_diff;
  rate = packets * HZ / period;
  avg_pkt_size = packets ? ((unsigned long) (rx_bytes -
    priv->last_moder_bytes[ring])) / packets : 0;



  if (rate > (MLX4_EN_RX_RATE_THRESH / priv->rx_ring_num) &&
      avg_pkt_size > MLX4_EN_AVG_PKT_SMALL) {
   if (rate < priv->pkt_rate_low)
    moder_time = priv->rx_usecs_low;
   else if (rate > priv->pkt_rate_high)
    moder_time = priv->rx_usecs_high;
   else
    moder_time = (rate - priv->pkt_rate_low) *
     (priv->rx_usecs_high - priv->rx_usecs_low) /
     (priv->pkt_rate_high - priv->pkt_rate_low) +
     priv->rx_usecs_low;
  } else {
   moder_time = priv->rx_usecs_low;
  }

  if (moder_time != priv->last_moder_time[ring]) {
   priv->last_moder_time[ring] = moder_time;
   cq = &priv->rx_cq[ring];
   cq->moder_time = moder_time;
   cq->moder_cnt = priv->rx_frames;
   err = mlx4_en_set_cq_moder(priv, cq);
   if (err)
    en_err(priv, "Failed modifying moderation for cq:%d\n",
           ring);
  }
  priv->last_moder_packets[ring] = rx_packets;
  priv->last_moder_bytes[ring] = rx_bytes;
 }

 priv->last_moder_jiffies = jiffies;
}
